--- a/.github/workflows/bugbash3.yml
+++ b/.github/workflows/bugbash3.yml
@@ -12,7 +12,7 @@ jobs:
       with:
         go-version: '1.21'
     - name: Prep modules
-      working-directory: ./trashlevels
+      working-directory: .
       run: |
         go mod init example.com/trash-levels && \
         go get github.com/gorilla/mux/ && \
